# HamNoise

./: .gitignore  README.md
.github/workflows/: deploy-web.yml
core/include/: denoise_audio.h  denoise_gru.h  denoise_model.h
core/src/: denoise_audio.c  denoise_gru.c
rp2350/: CMakeLists.txt  main.c
web/: Makefile  app.js  denoise.wasm  index.html  package-lock.json  package.json  styles.css  vite.config.ts
web/public/: denoise-worklet.js  denoise.wasm
web/scripts/: gen-icon.mjs
web/src/: App.tsx  global.css  main.tsx  theme.ts
web/src/audio/: audioInputBoost.ts  const.ts  denoiseEngine.ts  platform.ts  waterfallScope.ts
web/src/components/: ControlPrimitives.tsx  Meters.tsx  Scopes.tsx
web/src/hooks/: useDenoise.ts  usePersistedState.ts  useScreenWakeLock.ts
web/wasm/: denoise_web.c
